--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is MESA Empresarial's courses platform project Web API. It runs on localhost:3000 and must be up for the front-end to work properly.",
   "main": "jasmineReporter.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
