--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "install": "npm run build",
+    "install": "[ ! -d ./dist ] && npm install . && npm run build",
     "build": "tsc"
   },
   "repository": {
